@@ -141,7 +141,8 @@ is the unique Id of the object. Create a resource first:
 ...   'http://xml.zeit.de/online/2007/02/Seehofer',
 ...   'Seehofer', 'article', StringIO.StringIO('Seehofer schlaegt zurueck'),
 ...   properties={('resourcetype', 'DAV:'): 'article',
-...               ('foo', 'foo-ns'): 'bar'})
+...               ('foo', 'foo-ns'): 'bar'},
+...   contentType='text/plain')
 
 Let's have a look into the collection `/online/2007/01`. It is empty so far:
 
@@ -168,6 +169,8 @@ Seehofer schlaegt zurueck
  ('getlastmodified', 'DAV:'): u'Fri, 07 Mar 2008 12:47:16 GMT',
  ('resourcetype', 'DAV:'): 'article',
  ('type', 'http://namespaces.zeit.de/CMS/meta'): 'article'}
+>>> resource_2.contentType
+'text/plain'
 
 
 Also the collection contains the resource now:
